[package]
name = "ac_control_toshiba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.1"
actix-web = "4.1.0"
anyhow = "1.0.58"
const_format = "0.2.25"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.5.9"
